--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.8.4
   firebase_core: ^2.15.0
   velocity_x: ^4.1.1
+  google_fonts: ^5.1.0
 
 
 dev_dependencies:
